Fix multithreading bugs